--- a/indexv2.html
+++ b/indexv2.html
@@ -47,7 +47,7 @@
     </header>
 
     <div class="container-fluid">
-      <div class="jumbotron">
+      <div class="jumbotron text-center">
         <h1>Ten languages for coding.</h1>
         <p>
           Please see the list below:
